--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "Eat-Da-Burger",
   "version": "1.0.0",
   "description": "A burger logger (restuarant app)  with MySQL, Node, Express, Handlebars and a homemade ORM following the MVC design pattern",
-  "main": "server.js",
+  "main": "./server.js",
   "scripts": {
-    "start": "server.js",
+    "start": "./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
